--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,21 @@
 #root {
-  max-width: 1280px;
+  width: 100%;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 0;
   text-align: center;
-  height: 100%;
+  height: 100vh;
+}
+.app-body{
+  width: 100%;
+  height: 100vh;
+  /* border: 4px solid red; */
 }
 
 .logo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
+  
   transition: filter 300ms;
 }
 .logo:hover {
