--- a/src/cssFiles/Navbar.css
+++ b/src/cssFiles/Navbar.css
@@ -1,7 +1,9 @@
 nav{
+    margin: 0;
+    padding: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 3rem;
-    font-size: 1.3em;
+    height: 5rem;
+    font-size: 2em;
 }
